--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
   <body>
     <script>
       require('yogastudio/api/browsermain');
+      // Add any new js files from your project. ys-example doesn't have any.
     </script>
   </body>
 </html>
