Add segwell. Move acrobot from yogastudio

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,8 @@
   <body>
     <script>
       require('yogastudio/app/browsermain');
+      require('../acrobot/vis_acrobot.js');
+      require('../segwell/vis_segwell.js');
       // Add any new js files from your project. ys-example doesn't have any.
     </script>
   </body>
